# oc-go-switch

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  docker-compose.yml
crates/server/: Cargo.toml
crates/server/src/: business.rs  common.rs  init.rs  main.rs
crates/server/src/business/: log.rs  model_catalog.rs  proxy.rs  status.rs  workspace.rs
crates/server/src/business/account/: dto.rs  handler.rs  router.rs  service.rs
crates/server/src/business/account/dto/: add.rs  edit.rs  list.rs
crates/server/src/business/configuration/: dto.rs  handler.rs  router.rs  service.rs
crates/server/src/business/configuration/dto/: get.rs  runtime_update.rs  update.rs
crates/server/src/business/log/: handler.rs  query.rs  router.rs  store.rs
crates/server/src/business/model_catalog/: handler.rs  merged_models.rs  model_info.rs  model_list.rs  model_list_result.rs  router.rs  service.rs
crates/server/src/business/proxy/: claude.rs  filter.rs  openai.rs  quota.rs  response.rs  router.rs  stream.rs  tests.rs
crates/server/src/business/status/: dto.rs  handler.rs  router.rs  service.rs  tests.rs
crates/server/src/business/status/dto/: account.rs  active_key.rs  affinity.rs  (+6 more)
crates/server/src/business/workspace/: client_set.rs  credential.rs  discovery.rs  error.rs  handle.rs  key.rs  record.rs  scheduler.rs  status.rs
crates/server/src/common/: config.rs  model.rs
crates/server/src/common/auth/: middleware.rs
crates/server/src/common/config/: account.rs  error.rs  filter_action.rs  fixed.rs  go.rs  image_filter.rs  image_filter_model.rs  runtime.rs  runtime_store.rs  store.rs
crates/server/src/common/frontend/: assets.rs
crates/server/src/common/model/: log.rs
crates/server/src/init/: router.rs  runtime.rs
(+138 files in other folders)
