[package]
name = "oc-go-switch"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
reqwest.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rust-embed.workspace = true
tower-http.workspace = true
thiserror.workspace = true
chrono.workspace = true
adapter.workspace = true
